--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,4 +1,4 @@
-<p>Форма добавления машины</p>
+<p backGround render [testParam] = "'my test param'">Форма добавления машины</p>
 <hr/>
 <app-add-car (onAddCar) = "updateCarList($event)"></app-add-car>
 
